<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".game.GuessNumberFragment">

    <TextView
        android:id="@+id/randomNumberTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_mark_name"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@+id/infoTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/infoTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guessing_name"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_xsmall"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/oneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xsmall"
                android:layout_weight="1"
                android:text="@string/one_button_name"
                android:textSize="@dimen/text_size_small" />

            <Button
                android:id="@+id/twoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xsmall"
                android:layout_weight="1"
                android:text="@string/two_button_name"
                android:textSize="@dimen/text_size_small" />

            <Button
                android:id="@+id/threeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xsmall"
                android:layout_weight="1"
                android:text="@string/three_button_name"
                android:textSize="@dimen/text_size_small" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/fourButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xsmall"
                android:layout_weight="1"
                android:text="@string/four_button_name"
                android:textSize="@dimen/text_size_small" />

            <Button
                android:id="@+id/fiveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xsmall"
                android:layout_weight="1"
                android:text="@string/five_button_name"
                android:textSize="@dimen/text_size_small" />

            <Button
                android:id="@+id/sixButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xsmall"
                android:layout_weight="1"
                android:text="@string/six_button_name"
                android:textSize="@dimen/text_size_small" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sevenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xsmall"
                android:layout_weight="1"
                android:text="@string/seven_button_name"
                android:textSize="@dimen/text_size_small" />

            <Button
                android:id="@+id/eightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xsmall"
                android:layout_weight="1"
                android:text="@string/eight_button_name"
                android:textSize="@dimen/text_size_small" />

            <Button
                android:id="@+id/nineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xsmall"
                android:layout_weight="1"
                android:text="@string/nine_button_name"
                android:textSize="@dimen/text_size_small" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xsmall"
                android:layout_weight="1"
                android:text="@string/clear_button_name"
                android:textSize="@dimen/text_size_small" />

            <Button
                android:id="@+id/zeroButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xsmall"
                android:layout_weight="1"
                android:text="@string/zero_button_name"
                android:textSize="@dimen/text_size_small" />

            <Button
                android:id="@+id/GuessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xsmall"
                android:layout_weight="1"
                android:text="@string/guess_button_name"
                android:textSize="@dimen/text_size_small" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
